2004-05-04 Jens Tkotz <jens@peino.de> 1.4.4-cvs-b93

	* New: Added config option for maximum length of comments.

	* Change: Rewrite of navigator.inc and navphoto.inc

	* Fix: Images for Voting Result Graph were not found when embedded.

	* Fix: Removed Bigger border around breadcrumb when not on search page. (Introduced in b81)

	* Changes in setup/frame_test.php:
	  - Corrected use of doctype();
	  - Use of init.php
	  - Use of constant GALLERY_BASE
	  - Use of $HTTP_GET_VARS, because $_GET is only available for PHP >=4.1.0
	  - Use of common_header()

	* Change: Created function drawCommentAddForm which is used inside and in popup 
		  for unified Layout.

2004-05-04  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b92

	* Change: Don't use makeGalleryHeaderUrl in do_command "logout"
	  if it's a full url.  (Checking for "^http")

	* Change: Remove extraneous htmlspecialchars() from inline_imagewrap

	* Change: Use doCommand() and add "full" param to popup() in 
	  commentbox.inc and commentdraw.inc to prevent a refresh from
	  occuring, which can cause an issue using the new inline comments.
	  (Post a comment, immediately delete it,  it would attempt to re-post
	  the comment - fixed)

2004-05-04  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b91

	* Change: Add an isset() to inline_imagewrap.inc

2004-05-04  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b90

	* Change: "width" is not a valid property for <p>

2004-05-03  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b89

	* Change:  Remove one more htmlspecialchars() from a location
	  where it might be called twice on one URL

2004-05-03  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b88

	* Change: Remove independant htmlspecialchars() calls and move
	  it to a central location in makeGalleryUrl().  The only reason
	  htmlspecialchars() should be called is if make*Url() is not
	  appropriate.

	* Change: Add makeGalleryHeaderUrl() and makeAlbumHeaderUrl()