@@ -1,3 +1,9 @@
+2004-05-04 Jens Tkotz <jens@peino.de> 1.4.4-cvs-b94
+
+	* Fix: Adjust util.php due to renamed config option.
+	
+	* Change: removed unused/debug code.
+
 2004-05-04 Jens Tkotz <jens@peino.de> 1.4.4-cvs-b93
 
 	* New: Added config option for maximum length of comments.
@@ -17,6 +23,9 @@
 
 	* Change: Created function drawCommentAddForm which is used inside and in popup 
 		  for unified Layout.
+
+	* Change: Moved substitution for array_search when PHP <4.0.5 from
+		  view_photo.php into util.php so we can use it everywhere.
 
 2004-05-04  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b92
 
